--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -39,10 +39,10 @@ h2{
     @include font-85;
 }
 h3{
-    @include font-35;
+    @include font-60;
 }
 h4{
-    @include font-32;
+    @include font-50;
 }
 p {
     margin: 0;
@@ -99,10 +99,6 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-// input[type=number] {
-//     -moz-appearance: textfield;
-// }
-
 .container {
     max-width: 1220px;
 }
@@ -122,6 +118,21 @@ input::-webkit-inner-spin-button {
     &:hover{
         background: $_white;
         color: $_DA569F;
+    }
+    @include sm{
+        padding: 10px 18px;
+        border-radius: 10px;
+    }
+}
+.boxed__btn.lg{
+    max-width: 317px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @include ssm{
+        height: 50px;
+        max-width: 240px;
     }
 }
 
@@ -145,7 +156,7 @@ input::-webkit-inner-spin-button {
             font-size: 40px;
             border-radius: 15px;
             border: 2px solid #FFF;
-            background: #DA569F;
+            background: #4D69B1;
             color: #ffffff;
             width: 80px;
             height: 80px;
@@ -183,12 +194,6 @@ input::-webkit-inner-spin-button {
             &:hover{
                 transform: translateY(-10px);
             }
-        }
-        &:nth-child(1) a{
-            background: #4D69B1;
-        }
-        &:nth-child(2) a{
-            background: #4D69B1;
         }
 
     }
