--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -1,27 +1,30 @@
 .footer {
     position: relative;
     z-index: 1;
-    padding: 98px 0;
+    padding: 44px 0;
     @include mmd{
-        padding: 70px 0;
+        padding: 40px 0;
     }
     @include sm{
-        padding: 50px 0;
-    }
-    @include ssm{
         padding: 30px 0;
     }
     & .footer__content__area {
         & .footer__logo{
-            margin-bottom: 18px;
+            margin-bottom: 28px;
             display: inline-block;
            & img{
-                max-width: 174px;
+                max-width: 261px;
             }
         }
         
         & p{
             @include font-22;
+            font-weight: 400;
+        }
+        .copy__right{
+            font-weight: 600;
+            display: inline-block;
+            margin-top: 11px;
         }
         & .social__media{
             margin-top: 32px;
