--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -3,22 +3,26 @@
 =====================================*/
 .banner {
     padding-top: 250px;
-    padding-bottom: 120px;
+    padding-bottom: 90px;
     position: relative;
     z-index: 1;
     @include xl {
         padding-top: 190px;
     }
-    @include lg {
-        padding-top: 170px;
-    }
     @include mmd {
-        padding-top: 150px;
+        padding-top: 170px;
         padding-bottom: 30px;
+    }
+    @include sm {
+        padding-top: 130px;
     }
     &-content {
         z-index: 9;
         position: relative;
+        width: 105%;
+        @include sm{
+            width: 100%;
+        }
         & h1 {
             line-height: 1.3;
             margin-bottom: 0;
@@ -28,7 +32,7 @@
         }
         & p {
             margin-bottom: 40px;
-            @include font-28;
+            @include font-22;
             color: $_white;
             @include mmd{
                 margin-bottom: 30px;
@@ -121,6 +125,13 @@
             }
         }
     }
+
+    .boxed__btn{
+        margin-bottom: 48px;
+        @include sm{
+            margin: 0 auto 35px;
+        }
+    }
     
 }
 .a_star1{
@@ -142,7 +153,7 @@ figure.about__img {
 }
 figure.about__img img {
     position: absolute;
-    left: 0;
+    left: 30px;
     top: 0;
     z-index: -1;
     width: 110%;
@@ -157,20 +168,36 @@ figure.about__img img {
         height: 480px;
     }
     @include sm{
-        right: auto;
-        left: 50%;
-        z-index: -1;
-        width: 100%;
-        max-width: 400px;
+        position: relative;    
+        padding: 0 60px;
         height: auto;
-        transform: translateX(-50%);            
+    }
+    @include ssm{  
+        padding: 0px;
     }
 }
-
+.about-left{
+    position: relative;
+    @include sm{
+        margin-top: 30px;
+    }
+}
 .about-left h4 {
     text-align: center;
+    padding-left: 170px;
     span{            
         display: block;
+    }
+    @include mmd{
+        font-size: 30px;
+    }
+    @include sm{
+        font-size: 20px;
+        padding-left: 30px;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
 
@@ -182,192 +209,173 @@ figure.about__img img {
 .moonmap__area{
     position: relative;
     z-index: 1;
-    padding-top: 65px;
-    padding-bottom: 60px;
+    padding-top: 90px;
+    padding-bottom: 100px;
+    @include xl{
+        padding-bottom: 40px;
+    }
+    @include lg{
+        padding-bottom: 40px;
+    }
     @include mmd{
         padding-top: 30px;
-        padding-bottom: 30px;
+        padding-bottom: 20px;
     }
-    & .section__title{
-        max-width: 580px;
-        margin: 0 auto 40px;
-        h2{
-            margin-bottom: 10px;
-        }
+    @include sm{
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
     & .service_items{
-        padding-bottom: 120px;
-        @include mmd{
-            padding-bottom: 100px;
-        }
-        @include sm{
-            padding-bottom: 50px;
+        h3{
+            text-transform: capitalize;
         }
         & .moonapp_content{
             position: relative;
             z-index: 1;
             padding: 30px 31px;
-            border-radius: 16px;
-            border: 1.5px solid #FFF;
-            background: linear-gradient(180deg, #37469D 0%, rgba(55, 70, 157, 0.49) 99.99%);
-            height: 100%;
-            padding-bottom: 105px;
             display: block;
             @include sm{
-                padding-bottom: 50px;
-            }
-            & li{
-                color: $_FDEFEF;
-                @include font-20;
-                font-weight: 400;
-                margin-bottom: 7px;
-                position: relative;
-                z-index: 1;
-                padding-left: 32px;
-                @include sm{
-                    padding-left: 25px;
-                }
-                
-                &::before{
-                    position: absolute;
-                    content: "";
-                    left: 1px;
-                    top: 5.5px;
-                    width: 20px;
-                    height: 20px;
-                    border:2.5px solid #FFD7FE;
-                    border-radius: 50%;
-                    @include sm{
-                        top: 4px !important;
-                        width: 15px;
-                        height: 15px;
-                    }
-                }
-                &.active{
-                    font-weight: 800;
-                    @include sm{
-                        font-weight: 600;
-                    }
-                }
-                &.active::before{
-                    top: 3px;
-                    left: 0;
-                    width: 22px;
-                    height: 22px;
-                    border: 0;
-                    background-image: url('../img/listDot.svg');
-                    background-repeat: no-repeat;
-                    background-position: center;
-                    background-size: contain;
-                    @include sm{
-                        top: 4px !important;
-                        width: 15px;
-                        height: 15px;
-                    }
-                }
+                padding-bottom: 10px;
             }
             & .phase__img{
-                position: absolute;
-                right: 0;
-                bottom: -37px;
-                z-index: 2;
-                max-width: 274px;
-                @include lg{
-                    max-width: 200px;
-                }
-                @include mmd{
-                    max-width: 200px;
+                max-width: 602px;
+                position: relative;
+                & img{
+                    height: 454px;
+                    object-fit:contain;
+                    @include mmd{
+                        height: auto;
+                    }
                 }
             }
         }
     }
     
-    & .col-lg-4:last-child{
+    & .moonapp_content.one{
+        position: relative;
+        z-index: -1;
         & .phase__img{
-            right: -90px;
-            @include lg{
-                right: 0;
-            }
-            @include mmd{
-                right: 0;
+            img{
+               z-index: -1;
             }
         }
     }
-    & .download__area {
-        border-radius: 24px;
-        border: 2px solid #FF9ED4;
-        background: linear-gradient(180deg, #FF55B1 0%, #EE79B8 100%);
-        height: 100%;
-        padding: 17px 15px;
-        width: 110%;
-        margin-left: -5%;
-        @include lg{
-            width: 100%;
-            margin-left: 0;
-            height: auto;
+    & .moonapp_content.two{
+        & .phase__img{
+            img{
+                width: 105%;
+                height: 100%;
+                margin-top: -120px;
+                @include lg{
+                    width: 100%;
+                    margin-top: 0;
+                }
+                @include mmd{
+                    width: 100%;
+                    margin-top: 0;
+                }
+            }
         }
+    }
+    .quear_code_area{
+        padding-bottom: 120px;
         @include mmd{
-            width: 100%;
-            margin-left: 0;
-            height: auto;
+            padding-bottom: 80px;
         }
         @include sm{
-            max-width: 350px;
-            margin:40px auto;
-            margin-bottom: 0;
-
+            padding-bottom: 40px;
         }
-        & a {
-            border-radius: 16px;
+        h4{
+            margin-top: 32px;
+            margin-bottom: 32px;
+        }
+        .content .boxed__btn {
+            margin: 40px auto 0;
+        }
+        .tokenomics_copyTxt {
+            border-radius: 12px;
             border: 2px solid #FFF;
-            background: $_DA569F;
-            display: block;
-            padding: 32px 37px;
-            margin-top: 35px;
-            font-family: 'Krungthep', sans-serif;
-            color: $_white;
-            @include font-35;
-            text-transform: uppercase;
-            &:hover{
-                background: $_white;
-                color: $_DA569F;
+            background: #37469D;
+            backdrop-filter: blur(2px);
+            max-width: 984px;
+            margin: 0 auto;
+            padding: 22px 30px;
+            @include font-28;
+            @include sm{
+                padding: 18px 22px;
             }
-            @include lg{
-                font-size: 25px;
-                padding: 20px 25px;
+            & input{
+                width: 100%;
+                background: transparent;
+                border: 0;
+                @include font-28;
+                color: $_white;
+                padding: 0;
+                padding-right: 25px;
+                @include sm{
+                    width: 100%;
+                }
             }
-            @include mmd{
-                font-size: 20px;
-                padding: 20px;
-                margin-top: 20px;
+            & button{
+                background: transparent;
+                border:0;
+                position: absolute;
+                right:18px;
+                top: 50%;
+                transform: translateY(-50%);
+                padding: 0;
+                @include mmd{
+                    right: 0;
+                }
+                @include sm{
+                    right: 0;
+                }
+                svg{
+                    color: $_white;
+                    fill:$_white;
+                }
+                img{
+                    max-width: 40px;
+                }
+
+            }
+        }
+        .token-info {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            @include ssm{
+                display: block;
+            }
+        }
+        .tNumber {
+            position: relative;
+            width: 50%;
+            @include ssm{
+                width: 100%;
             }
         }
     }
     & .moonmap_bottom_left_img{
-        margin-right: 20px;
-        height: 100%;
-        @include lg{
-            margin-right: 0;
+        margin-top: -100px;
+        @include mmd{
+            margin-top: -50px;
         }
         @include mmd{
-            margin-right: 0;
+            margin-top: -70px;
         }
         @include ssm{
             height: 300px;
-        }
-        & img{
-            height: 100%;
-            @include lg{
-                height: auto;
-            }
-            @include mmd{
-                height: auto;
-            }
+            margin-top: -30px;
         }
         & video {
             border-radius: 24px;
             border: 2px solid #FF9ED4;
             background-color: #000000;
+            max-width: 881px;
+            display: flex;
+           margin: 0 auto;
             @include ssm{
                 height: 300px !important;
             }
@@ -390,3 +398,36 @@ figure.about__img img {
         animation: zoom-in-out 5s ease-in-out infinite;
     }
 }
+
+.phase3Img{
+    max-width: 645px;
+}
+
+.moonapp_content{
+    margin-left: -30px;
+    @include mmd{
+        margin-left: 0;
+    }
+    @include sm{
+        text-align: center;
+        margin-left: 0;
+    }
+    h3{
+        line-height: 1;
+    }
+    p{
+       @include font-48;
+       font-family: "Krungthep"; 
+       line-height: 1;
+    }
+}
+
+
+
+
+
+
+
+
+
+
