--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -44,6 +44,51 @@
     }
 }
 
+@mixin font-60 {
+    font-size: 60px;
+    line-height: 120%;
+    @include lg {
+        font-size: 55px;
+    }
+    @include md {
+        font-size: 50px;
+    }
+    @include sm {
+        font-size: 40px;
+    }
+}
+
+
+@mixin font-50 {
+    font-size: 50px;
+    line-height: 120%;
+    @include lg {
+        font-size: 45px;
+    }
+    @include md {
+        font-size: 40px;
+    }
+    @include sm {
+        font-size: 35px;
+    }
+}
+
+
+
+@mixin font-48 {
+    font-size: 48px;
+    line-height: 120%;
+    @include lg {
+        font-size: 45px;
+    }
+    @include md {
+        font-size: 40px;
+    }
+    @include sm {
+        font-size: 30px;
+    }
+}
+
 
 
 @mixin font-35 {
