--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -36,21 +36,23 @@
     }
     & .footer_left_star{
         position: absolute;
-        left: 0;
-        bottom: 20px;
+        left: 0px;
+        bottom: -10px;
         max-width: 120px;
         z-index: -1;
         animation: zoom-in-out 3s ease-in-out infinite;
     }
     & .footer_right_star{
         position: absolute;
-        right: 0;
-        bottom: 20px;
+        right: 0px;
+        bottom: 40px;
         max-width: 120px;
         z-index: -1;
         animation: zoom-in-out 4s ease-in-out infinite;
     }
 }
-
+.footer-wrapper{
+    position: relative;
+}
 
 /* Footer css */
