--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -136,22 +136,29 @@
 }
 .a_star1{
     position: absolute;
-    left: 10%;
+    right: 0%;
     top: 0;
-    max-width: 50px;
+    max-width: 38px;
     animation: rotate 9s normal linear infinite;
 }
 .a_star2{
     position: absolute;
-    left: 8%;
-    top: 60px;
+    right: -35px;
+    top: 62px;
+    max-width: 38px;
+    animation: zoom-in-out 2s ease-in-out infinite;
+}
+.a_star3{
+    position: absolute;
+    right: 0%;
+    top: 120px;
     max-width: 20px;
     animation: zoom-in-out 2s ease-in-out infinite;
 }
-figure.about__img {
+.about__img {
     position: relative;
 }
-figure.about__img img {
+.about__img img {
     position: absolute;
     left: 30px;
     top: 0;
@@ -176,13 +183,13 @@ figure.about__img img {
         padding: 0px;
     }
 }
-.about-left{
+.about-right{
     position: relative;
     @include sm{
         margin-top: 30px;
     }
 }
-.about-left h4 {
+.about-right h4 {
     text-align: center;
     padding-left: 170px;
     span{            
@@ -212,7 +219,7 @@ figure.about__img img {
     padding-top: 90px;
     padding-bottom: 100px;
     @include xl{
-        padding-bottom: 40px;
+        padding-bottom: 60px;
     }
     @include lg{
         padding-bottom: 40px;
@@ -383,11 +390,12 @@ figure.about__img img {
     }
     & .road_map_leftstar{
         position: absolute;
-        left: 30px;
-        bottom: 10%;
+        top: 0;
+        left: 47%;
         max-width: 53px;
-        z-index: -1;
+        z-index: 1;
         animation: zoom-in-out 4s ease-in-out infinite;
+        transform: translateX(-50%);
     }
     & .road_map_rightstar{
         position: absolute;
@@ -400,6 +408,7 @@ figure.about__img img {
 }
 
 .phase3Img{
+    position: relative;
     max-width: 645px;
 }
 
