--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -423,6 +423,7 @@
     @include sm{
         text-align: center;
         margin-left: 0;
+        margin-bottom: 20px;
     }
     h3{
         line-height: 1;
@@ -432,6 +433,7 @@
        font-family: "Krungthep"; 
        line-height: 1;
     }
+    
 }
 
 
